cosmestic code adjustements

--- a/pcb2.html
+++ b/pcb2.html
@@ -2,11 +2,14 @@
 <html>
 	<title>ESP8266</title>
 	<meta charset="UTF-8">
-	<link rel="icon" href="data:;base64,iVBORw0KGgo=">
+<!--Pour éliminer les requêtes de favicon.ico -->
+	<link rel="icon" href="data:;base64,iVBORw0KGgo="> 
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<style>
-		body {font-family: "Arial", sans-serif; background-image:url('http://test.here/img/pcb_small.jpg');
-		background-size:cover;}
+		body {
+			font-family: "Arial", sans-serif;
+			background-image:url('http://test.here/img/pcb_small.jpg');
+			background-size:cover;}
 		body, html {height: 100%;}
 		#main{
 			position:absolute;
