--- a/portal.html
+++ b/portal.html
@@ -14,7 +14,8 @@
   <label for="ssid">Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
   <select id="ssid" name="ssid">
     <option value="None"> </option>
-	scan_ssid
+	<option value="Test">Test</option>
+	<!-- scan_ssid -->
   </select>
   <br><br>
   <label for="psswd">Password:</label>
