on_off_server package complete

--- a/on_off_server/pcb2.html
+++ b/on_off_server/pcb2.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<style>
 		body {
+			background:#333;
 			font-family: "Arial", sans-serif;
 			background-image:url('http://test.here/img/pcb_small.jpg');
 			background-size:cover;}
@@ -32,7 +33,7 @@
 					ESP8266
 				</h1>
 				<p class="w3-large">
-					Unknow application toggle switch
+					Unknown application toggle switch
 				</p>
 				<div class="w3-bar buttons" style="width:100%">
 					<a href="/?r=on" class="w3-bar-item w3-button w3-xxlarge w3-teal w3-padding-large" style="width:50%">ON</a>
