Portal is now working!

--- a/auto_portal/portal.html
+++ b/auto_portal/portal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>8266_Conf</title>
+<title>ESP8266_Conf</title>
 <head>
 	<!--To prevent favicon.ico requests-->
 	<link rel="icon" href="data:;base64,iVBORw0KGgo="> 
